--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,4 +8,18 @@ services:
     ports:
       - "5000:80"
 
+  database:
+    image: mongo
+    container_name: mongodb
+    restart: always
+    environment:
+        MONGO_INITDB_ROOT_USERNAME: admin
+        MONGO_INITDB_ROOT_PASSWORD: password
+        MONGO_INITDB_DATABASE: demo1
+    ports:
+      - 27017:27017
+    volumes:
+      - ./mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
+      - /home/lef/data:/data/db
+
 
