--- a/service0/Dockerfile
+++ b/service0/Dockerfile
@@ -1,14 +1,14 @@
-FROM mcr.microsoft.com/dotnet/core/aspnet:3.1 AS base
+#See https://aka.ms/containerfastmode to understand how Visual Studio uses this Dockerfile to build your images for faster debugging.
+
+FROM mcr.microsoft.com/dotnet/core/runtime:3.1-buster-slim AS base
 WORKDIR /app
-EXPOSE 5000
 
-
-FROM mcr.microsoft.com/dotnet/core/sdk:3.1 AS build
+FROM mcr.microsoft.com/dotnet/core/sdk:3.1-buster AS build
 WORKDIR /src
-COPY ["service0.csproj", "./"]
-RUN dotnet restore "./service0.csproj"
+COPY ["service0/service0.csproj", "service0/"]
+RUN dotnet restore "service0/service0.csproj"
 COPY . .
-WORKDIR "/src/."
+WORKDIR "/src/service0"
 RUN dotnet build "service0.csproj" -c Release -o /app/build
 
 FROM build AS publish
