--- a/service0/Properties/launchSettings.json
+++ b/service0/Properties/launchSettings.json
@@ -1,10 +1,13 @@
-﻿{
+{
   "profiles": {
     "service0": {
       "commandName": "Project",
       "environmentVariables": {
         "DOTNET_ENVIRONMENT": "Development"
       }
+    },
+    "Docker": {
+      "commandName": "Docker"
     }
   }
 }
